# gp-split-saml

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
data/: com.github.dlewis7444.gp-split-saml.desktop
src/gp_split_saml/: __init__.py  __main__.py  app.py  config.py  cookies.py  log.py  network.py  notify.py  saml.py  theme.py  tray.py  vpn.py  window.py
src/gp_split_saml/data/: hipreport.sh  style.css
